--- a/CatPhotoApp.html
+++ b/CatPhotoApp.html
@@ -1,4 +1,9 @@
-<h2 style="color: red">CatPhotoApp</h2>
+<style>
+  .red-text {
+    color: red;
+  }
+</style>
 
-<p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run 
-catnip eat the grass sniff.</p>
+<h2 class="red-text">CatPhotoApp</h2>
+
+<p class="red-text">Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
