--- a/CatPhotoApp.html
+++ b/CatPhotoApp.html
@@ -1,34 +1,37 @@
 
-<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 <style>
-  .red-text {
-    color: red;
+  .injected-text {
+    margin-bottom: -25px;
+    text-align: center;
   }
 
-  h2 {
-    font-family: Lobster, Monospace;
-  }
-
-  p {
-    font-size: 16px;
-    font-family: Monospace;
-  }
-
-  .thick-green-border {
-    border-color: green;
-    border-width: 10px;
+  .box {
     border-style: solid;
-    border-radius: 50%;
+    border-color: black;
+    border-width: 5px;
+    text-align: center;
   }
 
-  .smaller-image {
-    width: 100px;
+  .yellow-box {
+    background-color: yellow;
+    padding: 10px;
+  }
+  
+  .red-box {
+    background-color: red;
+    padding: 20px;
+    margin: 20px;
+  }
+
+  .green-box {
+    background-color: green;
+    padding: 20px;
+    margin: 10px;
   }
 </style>
+<h5 class="injected-text">margin</h5>
 
-<h2 class="red-text">CatPhotoApp</h2>
-
-<img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. ">
-
-<p class="red-text">Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
-<p class="red-text">Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+<div class="box yellow-box">
+  <h5 class="box red-box">padding</h5>
+  <h5 class="box green-box">padding</h5>
+</div>
