--- a/CatPhotoApp.html
+++ b/CatPhotoApp.html
@@ -24,19 +24,17 @@
   .smaller-image {
     width: 100px;
   }
-  
-  .silver-background {
-    background-color: silver;
-  }
 </style>
 
-<h2 class="red-text">CatPhotoApp</h2>
+<div class="container-fluid">
+  <h2 class="red-text text-center">CatPhotoApp</h2>
 
-<p>Click here for <a href="#">cat photos</a>.</p>
+  <p>Click here for <a href="#">cat photos</a>.</p>
 
-<a href="#"><img class="smaller-image thick-green-border" alt="A cute orange cat lying on its back. " src="https://bit.ly/fcc-relaxing-cat"></a>
+  <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. "></a>
 
-<div class="silver-background">
+  <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera. ">
+  <button class="btn">Like</button>
   <p>Things cats love:</p>
   <ul>
     <li>cat nip</li>
@@ -49,14 +47,13 @@
     <li>thunder</li>
     <li>other cats</li>
   </ol>
+  <form action="/submit-cat-photo">
+    <label><input type="radio" name="indoor-outdoor"> Indoor</label>
+    <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
+    <label><input type="checkbox" name="personality"> Loving</label>
+    <label><input type="checkbox" name="personality"> Lazy</label>
+    <label><input type="checkbox" name="personality"> Crazy</label>
+    <input type="text" placeholder="cat photo URL" required>
+    <button type="submit">Submit</button>
+  </form>
 </div>
-
-<form action="/submit-cat-photo">
-  <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
-  <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
-  <label><input type="checkbox" name="personality" checked> Loving</label>
-  <label><input type="checkbox" name="personality"> Lazy</label>
-  <label><input type="checkbox" name="personality"> Energetic</label>
-  <input type="text" placeholder="cat photo URL" required>
-  <button type="submit">Submit</button>
-</form>
